= reposurgeon project news =

Repository head::
     Minor improvements in baton handling.
     repocutter pathrename REs are constrained to match full path segments
     --nobranch is retired; use repocutter to prepare flat repositories

4.30: 2021-10-13::
     Speed up DoTagify by parallelizing it.
     =J selection gets all commits and tags with non-ASCII metadata
     Added msgin --relax option.
     On most subcommands repocutter -r restricts which commits are transformed.
     Added pathlist command to repocutter.

4.29: 2021-09-08::
     Added swapsvn subcommand to repocutter.
     Don't screw up non-ASCII UTF-8 characters in pathnames.
     Node-parsing phase patches up missing copy sources.
     lint/setperm/prepend/squash/coalesce/add/remove now set Q bits.
     Several changes to reduce rge working--set cost of large selections.

4.28: 2021-08-07::
     Bug fixes for incremental mirroring, text search by tag name.
     Avoid creating duplicate tag names when a tag turns into a branch
     Enforce stable order of subnode traversals when doing node expansion.
     Added repocutter -t option to tag error messages from pipelines.

4.27: 2021-05-27::
     repocutter pathrename can do multiple path transforms in one command.
     repocutter closure finds transitive closures of path sets under copyfrom.
     IRC channel migration to OFTC.

4.26: 2021-04-03::
     Read and write original-oid fields in annotated tags.
     The read --cvsignores option is gone; use expunge to drop cvsignores.
     Replace tappy with tapview.

4.25: 2021-03-02::
     New manual section, "Tips and tricks".
     Tag rename checks that it won't step on an existing name.
     "help" without topic now emits a custom TOC with command groupings.
     Unite now produces union repositories with a valid master branch.
     repocutter errors out if presented with unexpected extra arguments.
     "tip" has been removed; what it was computing is not well defined.